WIP: Move kwin launching to systemd / plasma-session
Currently we have a whole daisy-chain of startplasmawayland-> kwin ->
startplasmawaylandsession -> launching the session.

This was needed as we needed environment variables which previously we
only knew after kwin started.

After some kwin refactoring this is no longer the case, and
kwin_wayland_wrapper will sync it's environment variables to the
appropriate startup environments.

This allows us to move starting kwin_wayland to be systemd managed,
brining resource control, alongside it's classic counterpart
plasma-session.

--- a/ksmserver/plasma-ksmserver.service.in
+++ b/ksmserver/plasma-ksmserver.service.in
@@ -1,7 +1,7 @@
 [Unit]
 Description=KDE Session Management Server
-Wants=plasma-kcminit.service
 PartOf=graphical-session.target
+After=plasma-kwin_wayland.service plasma-kcminit.service
 
 [Service]
 ExecStart=@CMAKE_INSTALL_FULL_BINDIR@/ksmserver
