--- a/startkde/kcminit/plasma-kcminit.service.in
+++ b/startkde/kcminit/plasma-kcminit.service.in
@@ -1,6 +1,7 @@
 [Unit]
 Description=KDE Config Module Initialization
 PartOf=graphical-session.target
+After=plasma-kwin_wayland.service
 
 [Service]
 ExecStart=@CMAKE_INSTALL_FULL_BINDIR@/kcminit_startup
